test/pass/expressions.min
program
    number x := 3;
    string s := "abc"
start
    number input;

    input := ?;

    (input + 2) * 3 / 4 - 2 ^ x ^ 2 !

    x := (x & 0) | x & ~input;

    x := input > x;

    -2 <= 3 = 4 >= 5 !

    &x !

    input % x + 1 !
end
