test/fail/invalid_args.min
program
    function number add number x; number y do
        return x + y
start
    add("1", "2");
end
